# AI-Customer-Support-Workflow

./: .gitignore  Dockerfile  README.md  fix_git.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  upload_to_github.py  upload_to_hf.py
app/: __init__.py  env.py  grader.py  models.py  tasks.py
server/: app.py  db.file  db.py
ui/: index.html  login.html  signup.html
