[project]
name = "ai-customer-support-workflow"
version = "0.1.0"
description = "OpenEnv AI Customer Support Workflow"
authors = [
    {name = "Ashmit Gautam"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "streamlit",
    "openenv-core>=0.2.0",
    "huggingface-hub"
]

[tool.setuptools]
packages = ["server"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"
